[package]
name = "spotify-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
reqwest = { version = "0.11", futures = ["json"] }
tokio = { version = "1.12.0", futures = ["full"] }
serde = { version = "1.0", futures = ["derive"] }
serde_json = "1.0"
